# kin_solver

./: .gitignore  CMakeLists.txt  README.md
include/: kinematics_solver.h
include/interfaces/: pinocchio.h
model/: simple_6dof.urdf
src/: test_pinocchio.cpp
src/interfaces/: pinocchio.cpp
